<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
   >

    <data>

        <variable
            name="userViewModel"
            type="com.secretmenu.viewmodels.UserViewModel" />


    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/pullToRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:background="@color/appBackground"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_fname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:hint="@string/fname" />


            <EditText
                android:id="@+id/et_lname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:hint="@string/lname" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/btn"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_60"
                    android:onClick="@{(v)->userViewModel.onClickMethods(v)}"
                    android:text="@string/add"
                    android:textColor="@color/btnTextColor" />

                <Button
                    android:id="@+id/clear"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_60"
                    android:onClick="@{(v)->userViewModel.onClickMethods(v)}"
                    android:text="@string/clear_all"
                    android:textColor="@color/btnTextColor" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_history"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginBottom="@dimen/dp_15"
                    android:dividerHeight="@dimen/dp_4">

                </androidx.recyclerview.widget.RecyclerView>
            </RelativeLayout>


        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>