<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.customvideocalling.common.BindingUtils" />

        <variable
            name="loginViewModel"
            type="com.customvideocalling.viewmodels.LoginViewModel" />

    </data>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        app:hideKeyBoardOnClick="@{`back` }">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                android:src="@drawable/login_img" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/login_upper" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_gravity="start"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_23"
            tools:ignore="AllCaps" />


        <LinearLayout
            android:id="@+id/ll_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_35"
            android:background="@drawable/ic_edit_back"
            android:layout_marginRight="@dimen/dp_10"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email_user_phone"
                android:background="@null"
                android:inputType="textEmailAddress"
                android:maxLength="64"
                android:textAllCaps="false"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/hint_size"
                app:font="@{`regular`}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_10"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_10"
            android:background="@drawable/ic_edit_back"
            android:paddingTop="@dimen/dp_15"
            android:paddingRight="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:background="@null"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textAllCaps="true"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/hint_size"
                app:font="@{`regular`}"
                tools:ignore="Autofill" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_gravity="right"
            android:onClick="@{(v) -> loginViewModel.clickListener(v)}"
            android:text="@string/new_user_signup"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_14"
            app:font="@{`regular`}" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="@drawable/round_back_transparent"
            android:onClick="@{(v) -> loginViewModel.clickListener(v)}"
            android:padding="@dimen/dp_10"
            android:text="@string/log_in"
            android:textColor="@color/colorWhite"

            />


        <TextView
            android:id="@+id/tv_guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_15"
            android:onClick="@{(v) -> loginViewModel.clickListener(v)}"
            android:text="@string/guest_text"
            android:textColor="@color/colorblack"
            android:textSize="@dimen/sp_14"
            app:font="@{`semibold`}"
            tools:ignore="AllCaps" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:visibility="gone"
            android:layout_marginTop="@dimen/dp_40"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:visibility="gone"
                android:layout_marginLeft="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_10"
                android:onClick="@{(v) -> loginViewModel.clickListener(v)}"
                android:text="@string/forgot_your_password"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/sp_12"
                app:font="@{`regular`}" />




        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
</layout>