<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.customvideocalling.common.BindingUtils" />


        <variable
            name="signUpViewModel"
            type="com.customvideocalling.viewmodels.SignUpViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:hideKeyBoardOnClick="@{`back` }">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_background_blue">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/login_img" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/login_upper" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_23"
            tools:ignore="AllCaps" />

        <LinearLayout
            android:id="@+id/ll_signup_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_35"
            android:background="@drawable/ic_edit_back"
            android:layout_marginRight="@dimen/dp_10"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10">


            <EditText
                android:id="@+id/et_userName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="First Name"
                android:background="@null"
                android:inputType="textEmailAddress"
                android:maxLength="64"
                android:textAllCaps="false"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/hint_size"
                app:font="@{`regular`}" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_signup_user_last"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_35"
            android:background="@drawable/ic_edit_back"
            android:layout_marginRight="@dimen/dp_10"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10">


            <EditText
                android:id="@+id/et_lastName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Last Name"
                android:background="@null"
                android:inputType="textEmailAddress"
                android:maxLength="64"
                android:textAllCaps="false"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/hint_size"
                app:font="@{`regular`}" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_35"
            android:background="@drawable/ic_edit_back"
            android:layout_marginRight="@dimen/dp_10"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10">


            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Email"
                android:background="@null"
                android:inputType="textEmailAddress"
                android:maxLength="64"
                android:textAllCaps="false"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/hint_size"
                app:font="@{`regular`}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_10"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_10"
            android:background="@drawable/ic_edit_back"
            android:paddingTop="@dimen/dp_15"
            android:paddingRight="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:background="@null"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textAllCaps="true"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/hint_size"
                app:font="@{`regular`}"
                tools:ignore="Autofill" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_signup_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_10"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_10"
            android:background="@drawable/ic_edit_back"
            android:paddingTop="@dimen/dp_15"
            android:paddingRight="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10">

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Confirm Password"
                android:background="@null"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textAllCaps="true"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/hint_size"
                app:font="@{`regular`}"
                tools:ignore="Autofill" />
        </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_select_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_10"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_10"
        android:background="@drawable/ic_edit_back"
        android:paddingTop="@dimen/dp_15"
        android:paddingRight="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10">

        <RadioGroup
            android:id="@+id/rg_user_type"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_weight="1"
                android:text="@string/doctor"
                android:id="@+id/rb_teacher"
                android:layout_width="0dp"
                android:buttonTint="@color/colorButton"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:layout_weight="1"
                android:layout_marginStart="@dimen/dp_20"
                android:text="@string/patient"
                android:id="@+id/rb_student"
                android:buttonTint="@color/colorButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20" />
        </RadioGroup>

    </LinearLayout>

        <Button
            android:id="@+id/btn_select_questionnaire"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:visibility="gone"
            android:background="@drawable/round_back_transparent"
            android:onClick="@{(v) -> signUpViewModel.clickListener(v)}"
            android:padding="@dimen/dp_10"
            android:text="Questionnaire"
            android:textColor="@color/colorWhite"

            />

        <Button
            android:id="@+id/btn_select_plan"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:visibility="gone"
            android:background="@drawable/round_back_transparent"
            android:onClick="@{(v) -> signUpViewModel.clickListener(v)}"
            android:padding="@dimen/dp_10"
            android:text="Select Plan"
            android:textColor="@color/colorWhite"

            />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@drawable/round_back_transparent"
            android:onClick="@{(v) -> signUpViewModel.clickListener(v)}"
            android:padding="@dimen/dp_10"
            android:text="@string/signup"
            android:textColor="@color/colorWhite"

            />


        <TextView
            android:id="@+id/tv_guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/guest_text"
            android:textColor="@color/colorblack"
            android:textSize="@dimen/sp_14"
            app:font="@{`semibold`}"
            tools:ignore="AllCaps" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:visibility="gone"
            android:layout_marginTop="@dimen/dp_40"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:visibility="gone"
                android:layout_marginLeft="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_10"
                android:text="@string/forgot_your_password"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/sp_12"
                app:font="@{`regular`}" />




        </LinearLayout>

    </LinearLayout>
    </ScrollView>

</layout>